--- a/planner.html
+++ b/planner.html
@@ -67,6 +67,6 @@
     </section>
 
     <!-- JavaScript -->
-    <script src="planner.css"></script>
+    <script src="planner.js"></script>
 </body>
 </html>
